# MyVideoPayer

./: CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/PlayerCore/: CMakeLists.txt  MyType.h  PlayerCore.cpp  PlayerCore.h  VideoPlayerCallBack.h
Sources/Utils/: CMakeLists.txt  MyCodecContext.h  MyFormatContext.h  MyFrame.h  MyPacket.h  MyQueue.h  MySwrContext.h  MySwsContext.h  MyThreadPool.h  MyYUVFrame.cpp  MyYUVFrame.h
Sources/Window/: CMakeLists.txt  FunctionTransfer.cpp  FunctionTransfer.h  displaywindow.cpp  displaywindow.h  displaywindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setvideourldialog.cpp  setvideourldialog.h  setvideourldialog.ui  videoslider.cpp  videoslider.h
